--- a/index.html
+++ b/index.html
@@ -1,74 +1,28 @@
-<!DOCTYPE html>
-<svg width="960" height="500"></svg>
-<style>
-	.bar {
-	  fill: steelblue;
-	}
+<body>
+		<svg>
 
-	.bar:hover {
-	  fill: brown;
-	}
-</style>
-// <script src="https://d3js.org/d3.v5.min.js"></script>
-<script src="//d3js.org/d3.v5.min.js"></script>
-<script>
+		</svg>
+</body>
+	<script>
+		const margin = 60;
+		const width = 1000 - 2 * margin;
+		const height = 600 - 2 * margin;
+	
+		const svg = d3.select('svg');
+		const chart = svg.append('g')
+	.attr('transform', `translate(${margin}, ${margin})`);
+	const yScale = d3.scaleLinear()
+    .range([height, 0])
+	.domain([0, 90]);
+	chart.append('g')
+	.call(d3.axisLeft(yScale));
+	
+	const xScale = d3.scaleBand()
+    .range([0, width])
+    .domain(sample.map((s) => s.language))
+    .padding(0.2)
 
-var svg = d3.select("svg"),
-margin = {
-	top: 20,
-	right: 20,
-	bottom: 30,
-	left: 50
-},
-width = +svg.attr("width") - margin.left - margin.right,
-height = +svg.attr("height") - margin.top - margin.bottom,
-g = svg.append("g").attr("transform", "translate(" + margin.left + "," + margin.top + ")");
-
-var parseTime = d3.timeParse("%d-%b-%y");
-
-var x = d3.scaleBand()
-	.rangeRound([0, width])
-	.padding(0.1);
-
-var y = d3.scaleLinear()
-	.rangeRound([height, 0]);
-
-d3.tsv("morley.tsv").then(function (data) {
-	x.domain(data.map(function (d) {
-			return d.Run;
-		}));
-	y.domain([0, d3.max(data, function (d) {
-				return Number(d.Speed);
-			})]);
-
-	g.append("g")
-	.attr("transform", "translate(0," + height + ")")
-	.call(d3.axisBottom(x))
-
-	g.append("g")
-	.call(d3.axisLeft(y))
-	.append("text")
-	.attr("fill", "#000")
-	.attr("transform", "rotate(-90)")
-	.attr("y", 6)
-	.attr("dy", "0.71em")
-	.attr("text-anchor", "end")
-	.text("Speed");
-
-	g.selectAll(".bar")
-	.data(data)
-	.enter().append("rect")
-	.attr("class", "bar")
-	.attr("x", function (d) {
-		return x(d.Run);
-	})
-	.attr("y", function (d) {
-		return y(Number(d.Speed));
-	})
-	.attr("width", x.bandwidth())
-	.attr("height", function (d) {
-		return height - y(Number(d.Speed));
-	});
-});
-
-</script>
+chart.append('g')
+    .attr('transform', `translate(0, ${height})`)
+    .call(d3.axisBottom(xScale));
+	</script>
