--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </style>
 <script src="https://d3js.org/d3.v5.min.js"></script>
 <script>
-var Skills = ['VisSkills','StatSkills','MathSkills','DrawSkills','UseSkills','ProgSkills','GxSkills','IntSkills','EvSkills','ComSkills','CollabSkills','GitSkills'];
+var Skills = ['VisSkills','StatSkills','MathSkills','DrawSkills','UseSkills','ProgSkills','GxSkills','IntSkills','EvSkills','ComSkills','CollabSkills']; //,'GitSkills'];
 //var data1 = [{Name:"hej",Order:1,Skills:['Pro','Fal'],Interest:1,Pro:7,Fal:5},{Name:"ble",Order:2,Skills:['Pro','Fal'],Fal:2,Pro:5},{Name:"flu",Order:3,Skills:['Pro','Fal'],Interest:5,Pro:10,Fal:9},{Name:"bluuuuu",Order:7,Skills:['Pro','Fal'],Interest:2,Pro:2,Fal:7}]
 var svg = d3.select("svg"),
 margin = {
@@ -77,8 +77,9 @@ var bluu = function (data) {
 		var index = Skills.indexOf(skill);
 		var y1 = 0;
 		for (i = 0; i < index; i++){
-			y1 += pers[Skills[i]];
+			y1 += Number(pers[Skills[i]]);
 		}
+		//console.log(y1,d);
 		return (y(Number(y1)+Number(value)));
 		
 	})
