--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<option value="StatSkills">Statistics</option>
 		<option value="MathSkills">Mathematics</option>
 		<option value="DrawSkills">Art and Drawing</option>
+		<option value="Brevity">Brevity</option>
 		
 	</select><br>
 	<div id="filtret">
@@ -72,13 +73,34 @@ var ferg = [d3.color("blue"),d3.color("red"),d3.color("yellow"),d3.color("green"
 
 var rawData; 
 var tooltip = d3.select("body").append("div").attr("class", "toolTip");
+y = d3.scaleLinear()
+		.rangeRound([height, 0]);
 
 
 
 
+var bluu = function (data,kind) {
 
-var bluu = function (data) {
-	g.append("g")
+	x = d3.scaleBand()
+    //.domain(data.map(d => d.Name))
+    .rangeRound([margin.left, width+20 - margin.right])
+    .padding(0.28)
+
+	if (kind == "single"){
+		y.domain([0,90]);
+	}else{
+		y.domain([0,400])
+	}
+	
+
+	//console.log(data);
+	x.domain(data.map(function (d) {
+		console.log(d.Name)
+			return d.Name;
+		}));
+		//console.log(d3.range(1,11))
+	
+	g.append("g").attr("class", kind)
     .selectAll("g")
     .data(data, d => d.Name)
 	.enter().append("g")
@@ -111,7 +133,6 @@ var bluu = function (data) {
                 //console.log(Skills.indexOf(d[0]),farg[Skills.indexOf(d[0])]);
                 return ferg[Skills.indexOf(d[0])];
 })
-
       .attr("x", d => x(d[1].Name))
 	.attr("class","bar")
 	.attr("class", d => d[0])
@@ -183,46 +204,79 @@ d3.tsv("IVIS19.tsv").then(function(data) {
 	console.log(rawData);
 
 
+	rawData.forEach(x =>{
+		x.Brevity = x.Hobbies.length + x.Learn.length
+	})
+	console.log(rawData);
+	//rawData.sort(function(a,b){return b.VisSkills - a.VisSkills});
 
-	rawData.sort(function(a,b){return b.VisSkills - a.VisSkills});
+	bluu(rawData,"single");
 
-
-	x = d3.scaleBand()
-    .domain(data.map(d => d.Name))
-    .rangeRound([margin.left, width - margin.right])
-    .padding(0.18)
-	 y = d3.scaleLinear()
-		.rangeRound([height, 0]);
-	
-	//console.log(data);
-	x.domain(data.map(function (d) {
-			return d.Name;
-		}));
-	y.domain([0,90]);
-
-	bluu(rawData);
-
-
-
+	g.selectAll(".single").style("display","none")
 
 	var data = rawData;
+
+
+
+
+
+
+
+// change sorting that's X
 	d3.select("#selector").on("change", function() {
 		//console.log(d, "i have a d right here");
 		var selectedValue = d3.select("#selector").property('value')
-  data.sort((a, b) => (a[selectedValue] - b[selectedValue])
-  )
+  data.sort((a, b) => (a[selectedValue] - b[selectedValue]))
+  var newgroups = makingGroups(data,selectedValue);
   x.domain(data.map(function(d, i) {
     return d.Name;
   }));
-  g.selectAll("rect")
+  g.selectAll(".single")
+  .selectAll("rect")
     .transition()
     .duration(500)
     .attr("x", function(d,i) {
 		//console.log(d,d[i],i,d.Order);
       return x(d[1].Name);
     })
+	g.selectAll(".groupings")
+	.selectAll("rect")   
+	.transition()
+    .duration(500)
+	.attr("y", d =>  {
+		var skill = d[0];
+		var pers = d[1];
+		newgroups.forEach(k =>{
+			if (k.Name == d[1].Name){
+				pers = k;
+			}
+		});
+		var value = pers[skill];
+		var index = Skills.indexOf(skill);
+		var y1 = 0;
+		for (i = 0; i < index; i++){
+			y1 += Number(pers[Skills[i]]);
+		}
+		return (y(Number(y1)+Number(value)));
+	})
+	.attr("height", d =>{ 
+		var skill = d[0];
+		var pers = d[1];
+		newgroups.forEach(k =>{
+			if (k.Name == d[1].Name){
+				pers = k;
+			//console.log(k,d[1]);
+			}
+		});
+		var value = pers[skill];
+		return(y(0)-y(Number(value)))
+	
+	})
 })
 
+
+
+// change filter! that's Y
 d3.selectAll(".filter").on("change", ()=>{
 	var filter = [];
 	var nySkill = document.getElementById("filtret").children;
@@ -230,6 +284,15 @@ d3.selectAll(".filter").on("change", ()=>{
 		if(!nySkill[i].checked)
 		filter.push(nySkill[i].value);
 	}
+	newfilter(data,filter,".single");
+	newfilter(groupdata,filter,".groupings");
+	})
+
+
+
+
+
+	function newfilter(data,filter,kind) {
 	var newdata = JSON.parse(JSON.stringify(data))
 
 	newdata.forEach(d => {
@@ -238,13 +301,8 @@ d3.selectAll(".filter").on("change", ()=>{
 			//console.log(d,x)
 		})
 		})
-		//g.selectAll("*").remove();
-		//bluu(newdata);
-	
-
-	//console.log(newdata);
-
-	g.selectAll("rect")   
+	g.selectAll(kind)
+	.selectAll("rect")   
 	.transition()
     .duration(500)
 	  .attr("y", d =>  {
@@ -266,7 +324,7 @@ d3.selectAll(".filter").on("change", ()=>{
 			y1 += Number(pers[Skills[i]]);
 		}
 		if (value == 0){
-			console.log(value,y1,y(Number(y1)+Number(value)),y(0)-y(Number(value)),skill,pers)
+			//console.log(value,y1,y(Number(y1)+Number(value)),y(0)-y(Number(value)),skill,pers)
 			return(0);
 		}
 		//console.log(y1,d);
@@ -284,22 +342,171 @@ d3.selectAll(".filter").on("change", ()=>{
 		});
 		var value = pers[skill];
 		if (value == 0){
-			console.log("wasssss")
+			//console.log("wasssss")
 			return 0;
 		} 
 		return(y(0)-y(Number(value)))
 	
 	})
-	//y.domain([0, (filter.length-2)*10])
+	}
 
-		//console.log(filter);
+
+
+
+
+
+ function makingGroups(data,selectedValue){
+	 selectedValue = "VisSkills"
+	 if (selectedValue !== undefined){
+	 //console.log(data);
+	 //data.sort((a, b) => (b[selectedValue] - a[selectedValue]))
+	 console.log(data,"hello!")
+	 }
+	var groupdata = [];
+	for(i = 0; i<5;i=i++){
+		var group = {}
+		//check = [];
+		Skills.forEach( d=> {
+			group[d] = Number(data[i*5][d]);
+			//check.push( [Number(data[i*5][d]),d])
+			for(j = 1; j<5;j++){
+				if (d == "VisSkills") console.log(data[(i*5)+j][d],[d]);
+				//console.log(group[d],data[(i*5)+j][d],Number(group[d])+Number(data[(i*5)+j][d]))
+				group[d] += parseInt(data[(i*5)+j][d])
+				//console.log(group[d])
+				//check.push( [group[d],Number(data[(i*5)][d]),d,data[(i*5)+j].Name])
+			}
+			//group[d] = (group[d]);
+			//check.push(group[d])
+
+		});
+	console.log(check,"ble",i+j)
+	group.Name = "Group "+(i+1)
+	groupdata.push(JSON.parse(JSON.stringify(group)))
+	}
+	for(i = 0; i<6;i++){
+		group = {}
+		Skills.forEach( d=> {
+			group[d] = Number(data[(i*6)][d]);
+			for(j = 1; j<6;j++){
+				group[d] += Number(data[(i*6)+j][d])
+			}
+			//group[d] = (group[d]/5);
+		});
+	group.Name = "Group "+((i+6));
+	groupdata.push(JSON.parse(JSON.stringify(group)))
+	}
+	return groupdata;
+ }
+ groupdata = makingGroups(data);
+	console.log(groupdata)
+	bluu(groupdata,"groupings");
+
+
+
+
+
+
+
+
+
+
+/*
+
+	x0 = d3.scaleBand().range([0, width - margin.left - margin.right])
+	x1 = d3.scaleBand();
+	x0.domain(d3.range(1,11))
+	x1.domain(data.map(d => d.Name)).range([0, x0.bandwidth()])
+	var xAxis = d3.axisBottom(x0)
+
+	var groups = g.selectAll(".Groups")
+	.data(d3.range(1,11))
+	.enter().append("g")
+	.attr("class", d=> {
+		return "Groups."+d
+	})
+	.attr("transform", d =>{
+		console.log(x0(d))
+	return 'translate('+x0(d)+',0)'
+	 });
+
+	 {
+	groups.selectAll(d => {return ".Groups."+d})
+	.selectAll("g")
+    .data(data, d => d.Name)
+	.enter().append("g")
+	.attr("class",d => d.Name)
+	.on("mousemove", function(d){
+            tooltip
+              .style("left", d3.event.pageX - 50 + "px")
+              .style("top", d3.event.pageY - 70 + "px")
+              .style("display", "inline-block")
+              .html((d.Name) + "<br>" + "" + (Number(d.MathSkills)));
+        })
+    		.on("mouseout", function(d){ tooltip.style("display", "none");})
+    .selectAll("rect")
+    .data(d => {
+		//console.log(data,d,"argggg");
+		outerlist = [];
+		Skills.forEach(e => {
+		var list = [];
+		list.push(e);
+		list.push(d);
+		outerlist.push(JSON.parse(JSON.stringify(list)));
+		});
+		return (outerlist)
+	}, d => {
+		return d[0]
+	} )
+	.enter().append("rect")
+	  //.attr("fill", d=> ferg[d.folor] )
+       .attr("fill", d => {
+                //console.log(Skills.indexOf(d[0]),farg[Skills.indexOf(d[0])]);
+                return ferg[Skills.indexOf(d[0])];
+})
+      .attr("x", d => x1(d[1].Name)+i)
+	.attr("class","bar")
+	.attr("class", d => d[0])
+	  .attr("y", d =>  {
+		var skill = d[0];
+		var pers = d[1];
+		var value = pers[skill];
+		//console.log("wat",skill,pers,value,"bleee");
+		var index = Skills.indexOf(skill);
+		var y1 = 0;
+		for (i = 0; i < index; i++){
+			y1 += Number(pers[Skills[i]]);
+		}
+		//console.log(y1,d);
+		return (y(Number(y1)+Number(value)));
+		
 	})
 
+	  .attr("height", d =>{ 
+		var skill = d[0];
+		var pers = d[1];
+		var value = pers[skill];
+		return( y(0)-y(Number(value)))
+	
+	})
+	  //.attr("bullshit", d.Skills)
+      .attr("width", 1) 
+	 }
 
+	 g.append("g")
+	.attr("transform", "translate(0," + height + ")")
+	.call(d3.axisBottom(x0).tickSizeOuter(0).tickFormat(() => ""));
 
-
-
-
+	g.append("g")
+	.call(d3.axisLeft(y))
+	.append("text")
+	.attr("fill", "#000")
+	.attr("transform", "rotate(-90)")
+	.attr("y", 6)
+	.attr("dy", "0.71em")
+	.attr("text-anchor", "end")
+	.text("Skill");
+*/
 
 
 
