--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
 	<input type="checkbox" value="ComSkills" class="filter" name="Evaluation" checked> Communication
 	<input type="checkbox" value="CollabSkills" class="filter" name="Programming"checked> Collaberation
 	<input type="checkbox" value="GitSkills" class="filter" name="Evaluation" checked> Code Repository
+	<input type="checkbox" value="UseSkills" class="filter" name="Usage" checked> Computer Usage
 	</div>
-	<button type="button">Click Me!</button>
+	<button type="button" id= "People">People</button>
+	<button type="button" id = "Groups">Groups</button>
 <svg width="1200" height="800"></svg>
 <style>
 	.barr {
@@ -44,16 +46,16 @@
   display: none;
   min-width: 80px;
   height: auto;
-  background: none repeat scroll 0 0 #ffffff;
-  border: 1px solid #6F257F;
-  padding: 14px;
+  background: none repeat scroll 0 0 #ffc9c9;
+  padding: 12px;
   text-align: center;
+  opacity: 0.9
 }
 </style>
 <script src="https://d3js.org/d3.v5.min.js"></script>
 <script>
-var Fancy = ['Information Visualization Skills','Statistical Skills','Mathematical Skills','Drawing and Artistic Skills','Programming Skills','Computer Graphics Programming Skills','Human-computer Interaction Programming Skills','User Experience Evaluation Skills','Communication Skills','Collaboration Skills','Code Repository Skills'];
-var Skills = ['VisSkills','StatSkills','MathSkills','DrawSkills','ProgSkills','GxSkills','IntSkills','EvSkills','ComSkills','CollabSkills','GitSkills'];
+var Fancy = ['Information Visualization Skills','Statistical Skills','Mathematical Skills','Drawing and Artistic Skills','Computer Usage Skills','Programming Skills','Computer Graphics Programming Skills','Human-computer Interaction Programming Skills','User Experience Evaluation Skills','Communication Skills','Collaboration Skills','Code Repository Skills'];
+var Skills = ['VisSkills','StatSkills','MathSkills','DrawSkills','UseSkills','ProgSkills','GxSkills','IntSkills','EvSkills','ComSkills','CollabSkills','GitSkills'];
 //var data1 = [{Name:"hej",Order:1,Skills:['Pro','Fal'],Interest:1,Pro:7,Fal:5},{Name:"ble",Order:2,Skills:['Pro','Fal'],Fal:2,Pro:5},{Name:"flu",Order:3,Skills:['Pro','Fal'],Interest:5,Pro:10,Fal:9},{Name:"bluuuuu",Order:7,Skills:['Pro','Fal'],Interest:2,Pro:2,Fal:7}]
 var svg = d3.select("svg"),
 margin = {
@@ -87,11 +89,11 @@ var bluu = function (data,kind) {
     .rangeRound([margin.left, width+20 - margin.right])
     .padding(0.28)
 
-	if (kind == "single"){
+	//if (kind == "single"){
 		y.domain([0,90]);
-	}else{
-		y.domain([0,400])
-	}
+	//}else{
+	//	y.domain([0,400])
+	//}
 	
 
 	//console.log(data);
@@ -140,7 +142,7 @@ var bluu = function (data,kind) {
 					theNames += " "+f+","
 				}) 
 				//console.log(theNames)
-				return theNames +"<br>" + "" + Fancy[Skills.indexOf(d[0])] +" : "+ d[1][d[0]] ;
+				return theNames +"<br>" + "" + Fancy[Skills.indexOf(d[0])] +" : "+ parseInt(d[1][d[0]]*5) ;
 				}
 			})
         })
@@ -176,10 +178,16 @@ var bluu = function (data,kind) {
 
 	g.append("g")
 	.attr("transform", "translate(0," + height + ")")
-	.call(d3.axisBottom(x).tickSizeOuter(0).tickFormat(() => ""));
+	.call(d3.axisBottom(x).tickSizeOuter(0).tickFormat((d,k) => {
+		if (k == 0){ return "Largest - Smallest Value";}
+		else{
+		return ""
+		}
+	}))
+	.attr("class",kind);
 
 	g.append("g")
-	.call(d3.axisLeft(y))
+	.call(d3.axisLeft(y)).attr("class", kind)
 	.append("text")
 	.attr("fill", "#000")
 	.attr("transform", "rotate(-90)")
@@ -224,17 +232,17 @@ d3.tsv("IVIS19.tsv").then(function(data) {
 
 	bluu(rawData,"single");
 
-	g.selectAll(".single").style("display","none")
+	//g.selectAll(".single").style("display","none")
 
 	var data = rawData;
 
 
 
 
+	theNames = "";
 
 
-
-// change sorting that's X
+// change sorting that's X 
 	d3.select("#selector").on("change", function() {
 		//console.log(d, "i have a d right here");
 		var selectedValue = d3.select("#selector").property('value')
@@ -260,7 +268,24 @@ d3.tsv("IVIS19.tsv").then(function(data) {
       return x(d[1].Name);
     })
 	g.selectAll(".groupings")
-	.selectAll("rect")   
+	.selectAll("rect")
+	.on("mousemove", function(d){
+		tooltip
+			.style("left", d3.event.pageX - 50 + "px")
+			.style("top", d3.event.pageY - 70 + "px")
+			.style("display", "inline-block")
+			.html(()=>{
+				newgroups.forEach(k =>{
+				if (k.Name == d[1].Name){
+					theNames ="";
+				d[1] = k;
+				d[1].allNames.forEach(f => {
+					theNames += " "+f+","
+				})
+			}})
+			return theNames +"<br>" + "" + Fancy[Skills.indexOf(d[0])] +" : "+ parseInt(d[1][d[0]]*5) ;
+        })
+	}) 
 	.transition()
     .duration(500)
 	.attr("y", d =>  {
@@ -268,7 +293,9 @@ d3.tsv("IVIS19.tsv").then(function(data) {
 		var pers = d[1];
 		newgroups.forEach(k =>{
 			if (k.Name == d[1].Name){
+				console.log(k,d[1])
 				pers = k;
+				
 			}
 		});
 		var value = pers[skill];
@@ -297,6 +324,10 @@ d3.tsv("IVIS19.tsv").then(function(data) {
 
 
 // change filter! that's Y
+/*d3.selectAll("#filtret").selectAll("input").data(Skills).enter().append("input")
+.attr("type","checkbox")
+.attr("checked",true)
+.attr("value", d=> d)*/
 d3.selectAll(".filter").on("change", ()=>{
 	var filter = [];
 	var nySkill = document.getElementById("filtret").children;
@@ -393,24 +424,24 @@ d3.selectAll(".filter").on("change", ()=>{
 	for(i = 0; i<5;i++){
 			for(j = 0; j<5;j++){
 		Skills.forEach( d=> {
-			groups[i][d] += parseInt(data[(i*5)+j][d])
+			groups[i][d] += parseFloat(data[(i*5)+j][d]/5)
 			})
-		groups[i].allNames.push(data.Name);
+		groups[i].allNames.push(data[(i*5)+j].Name);
 		}
 	}
 	for(i = 0; i<5;i++){
 			for(j = 0; j<6;j++){
 		Skills.forEach( d=> {
-			groups[i+5][d] += parseInt(data[(i*6)+j+25][d])
+			groups[i+5][d] += parseFloat(data[(i*6)+j+25][d]/5)
 			})
-		groups[i].allNames.push(data.Name);
+		groups[i+5].allNames.push(data[(i*6)+j+25].Name);
 		}
 	}
 
 	return groups;
  }
  groupdata = makingGroups(data);
-	console.log(groupdata)
+	console.log(groupdata,"fleee")
 //	bluu(groupdata,"groupings");
 
 
@@ -443,7 +474,7 @@ d3.selectAll(".filter").on("change", ()=>{
 			Min.Total += Number(d[tut]);
 		})
 		Skills.forEach(varje => {
-			Min[varje] += Number(d[varje]);
+			Min[varje] += parseFloat(d[varje]/5);
 		})
 		Min.allNames.push(d.Name)
 	 })
@@ -454,114 +485,25 @@ groupdata = makingShed(data);
 	bluu(groupdata,"groupings");
 
 
+g.selectAll(".groupings").style("display","none")
 
-	//g.selectAll(".groupings").style("display","none")
-
-
-
-
-
-
-
-
-
-
-/*
-
-	x0 = d3.scaleBand().range([0, width - margin.left - margin.right])
-	x1 = d3.scaleBand();
-	x0.domain(d3.range(1,11))
-	x1.domain(data.map(d => d.Name)).range([0, x0.bandwidth()])
-	var xAxis = d3.axisBottom(x0)
-
-	var groups = g.selectAll(".Groups")
-	.data(d3.range(1,11))
-	.enter().append("g")
-	.attr("class", d=> {
-		return "Groups."+d
-	})
-	.attr("transform", d =>{
-		console.log(x0(d))
-	return 'translate('+x0(d)+',0)'
-	 });
-
-	 {
-	groups.selectAll(d => {return ".Groups."+d})
-	.selectAll("g")
-    .data(data, d => d.Name)
-	.enter().append("g")
-	.attr("class",d => d.Name)
-	.on("mousemove", function(d){
-            tooltip
-              .style("left", d3.event.pageX - 50 + "px")
-              .style("top", d3.event.pageY - 70 + "px")
-              .style("display", "inline-block")
-              .html((d.Name) + "<br>" + "" + (Number(d.MathSkills)));
-        })
-    		.on("mouseout", function(d){ tooltip.style("display", "none");})
-    .selectAll("rect")
-    .data(d => {
-		//console.log(data,d,"argggg");
-		outerlist = [];
-		Skills.forEach(e => {
-		var list = [];
-		list.push(e);
-		list.push(d);
-		outerlist.push(JSON.parse(JSON.stringify(list)));
-		});
-		return (outerlist)
-	}, d => {
-		return d[0]
-	} )
-	.enter().append("rect")
-	  //.attr("fill", d=> ferg[d.folor] )
-       .attr("fill", d => {
-                //console.log(Skills.indexOf(d[0]),farg[Skills.indexOf(d[0])]);
-                return ferg[Skills.indexOf(d[0])];
-})
-      .attr("x", d => x1(d[1].Name)+i)
-	.attr("class","bar")
-	.attr("class", d => d[0])
-	  .attr("y", d =>  {
-		var skill = d[0];
-		var pers = d[1];
-		var value = pers[skill];
-		//console.log("wat",skill,pers,value,"bleee");
-		var index = Skills.indexOf(skill);
-		var y1 = 0;
-		for (i = 0; i < index; i++){
-			y1 += Number(pers[Skills[i]]);
-		}
-		//console.log(y1,d);
-		return (y(Number(y1)+Number(value)));
-		
-	})
-
-	  .attr("height", d =>{ 
-		var skill = d[0];
-		var pers = d[1];
-		var value = pers[skill];
-		return( y(0)-y(Number(value)))
+d3.select("#People").on("click", ()=> {
+	g.selectAll(".groupings").style("display","none")
+	//bluu(data)
+	g.selectAll(".single").style("display","initial")
 	
-	})
-	  //.attr("bullshit", d.Skills)
-      .attr("width", 1) 
-	 }
+});
 
-	 g.append("g")
-	.attr("transform", "translate(0," + height + ")")
-	.call(d3.axisBottom(x0).tickSizeOuter(0).tickFormat(() => ""));
+d3.select("#Groups").on("click", ()=> {
+	g.selectAll(".single").style("display","none")
+	g.selectAll(".groupings").style("display","initial")
+	y.domain[0]
+});
 
-	g.append("g")
-	.call(d3.axisLeft(y))
-	.append("text")
-	.attr("fill", "#000")
-	.attr("transform", "rotate(-90)")
-	.attr("y", 6)
-	.attr("dy", "0.71em")
-	.attr("text-anchor", "end")
-	.text("Skill");
-*/
+
+
+
+
 
 
 
